--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+
+.post{
+  margin: auto;
+}
 .postTitle{
   font-size: 24px;
   margin: auto;
   text-align: center;
 }
-.post{
+.postBlock{
   border: 7px solid black;
   width: 480px;
   margin: auto;
