--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@
   margin: auto;
   text-align: center;
 }
-authorDate{
+.authorDate{
   text-align: right;
   font-size: 14px;
+  padding: 15px;
 }
 .postBlock{
   margin: auto;
