--- a/wiki/style.css
+++ b/wiki/style.css
@@ -1,3 +1,7 @@
-body {
-  margin:20px;
+.links{
+  width:1000px;
+  margin 100px auto;
+  padding: 25px;
+  border: 4px black solid;
+  font-size: 12pt;
 }
