--- a/wiki/style.css
+++ b/wiki/style.css
@@ -1,6 +1,7 @@
 .links{
   width:1000px;
-  margin 100px auto;
+  margin: auto;
+  margin-top: 25px;
   padding: 25px;
   border: 4px black solid;
   font-size: 12pt;
