--- a/links/style.css
+++ b/links/style.css
@@ -9678,6 +9678,14 @@ h3 {
   margin-bottom: 15px;
 }
 
+.blog-footer {
+  padding: 2.5rem 0;
+  color: #999;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-top: 0.05rem solid #e5e5e5;
+}
+
 nav {
   display: -ms-flexbox;
   display: flex;
