--- a/style.css
+++ b/style.css
@@ -9678,6 +9678,12 @@ h3 {
   margin-bottom: 15px;
 }
 
+#thought {
+  border: 2px solid #00ff7b;
+  background-color: #ccffee;
+  margin-bottom: 15px;
+}
+
 .blog-footer {
   padding: 2.5rem 0;
   color: #999;
