--- a/links/style.css
+++ b/links/style.css
@@ -9655,6 +9655,10 @@ h3 {
     border-color: #dee2e6;
   }
 }
+#body {
+  background-image: url("https://raw.githubusercontent.com/DanielWNewman/home/master/ccgrafbg.jpg");
+}
+
 .blog-header-logo {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
   font-size: 2.25rem;
@@ -9676,6 +9680,13 @@ h3 {
   border: 2px solid #007bff;
   background-color: #cceeff;
   margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+#thought {
+  border: 2px solid #00ff7b;
+  background-color: #ccffee;
+  margin-bottom: 15px;
 }
 
 .blog-footer {
@@ -9684,6 +9695,8 @@ h3 {
   text-align: center;
   background-color: #f9f9f9;
   border-top: 0.05rem solid #e5e5e5;
+  position: absolute;
+  bottom: 0;
 }
 
 nav {
@@ -9697,16 +9710,6 @@ nav {
   text-align: center;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
-}
-
-.blog-header-logo {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
-  font-size: 2.25rem;
-}
-
-.bolog-header {
-  line-height: 1;
-  border-bottom: 1px solid #e5e5e5;
 }
 
 #category {
@@ -9715,19 +9718,6 @@ nav {
 
 #link {
   margin-bottom: 15px;
-}
-
-nav {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  padding-bottom: 1rem;
-  margin-top: -1px;
-  overflow-x: auto;
-  text-align: center;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
 }
 
 /*# sourceMappingURL=style.css.map */
