--- a/links/style.scss
+++ b/links/style.scss
@@ -1,11 +1,18 @@
 // Custom.scss
 // Option A: Include all of Bootstrap
 
-@import "../style.scss";
+@import "bootstrap-4.3.1/scss/bootstrap";
+
+
 
 $trueBlue: #007bff;
+$thinkGreen:#00ff7b;
 $backgroundBlue: #cceeff;
+$backgroundGreen: #ccffee;
 
+#body {
+  background-image: url("https://raw.githubusercontent.com/DanielWNewman/home/master/ccgrafbg.jpg");
+}
 .blog-header-logo{
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
   font-size: 2.25rem;
@@ -15,14 +22,35 @@ $backgroundBlue: #cceeff;
   border-bottom: 1px solid #e5e5e5;
 }
 
-#category {
-margin-bottom: 24px;
+#menu {
+  height:80px;
+  background-color:$trueBlue;
+  color:rgb(248, 239, 213);
+  font-size: 60px;
 }
 
-#link{
-
+#post{
+  border: 2px solid $trueBlue;
+  background-color: $backgroundBlue;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+#thought{
+  border: 2px solid $thinkGreen;
+  background-color: $backgroundGreen;
   margin-bottom: 15px;
 }
+
+.blog-footer{
+padding: 2.5rem 0;
+color: #999;
+text-align: center;
+background-color: #f9f9f9;
+border-top: .05rem solid #e5e5e5;
+position: absolute;
+bottom:0;
+}
+
 nav {
 display: -ms-flexbox;
 display: flex;
@@ -34,4 +62,13 @@ overflow-x: auto;
 text-align: center;
 white-space: nowrap;
 -webkit-overflow-scrolling: touch;
+}
+
+#category {
+margin-bottom: 24px;
+}
+
+#link{
+
+  margin-bottom: 15px;
 }
