--- a/style.css
+++ b/style.css
@@ -9697,6 +9697,13 @@ h3 {
   margin-top: 15px;
 }
 
+#meme {
+  border: 2px solid #aaa;
+  background-color: #eee;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
 .blog-footer {
   padding: 2.5rem 0;
   color: #999;
