--- a/warble/style.css
+++ b/warble/style.css
@@ -9656,7 +9656,7 @@ h3 {
   }
 }
 #body {
-  background-image: url("https://raw.githubusercontent.com/DanielWNewman/home/master/ccgrafbg.jpg");
+background-color:#EEE;
 }
 
 .blog-header-logo {
